name:                sdl2-skel

version:             0.1

license:             MIT

license-file:        LICENSE

author:              oddsome

build-type:          Simple

cabal-version:       >=1.10

executable sdl2-skel

  main-is:             Main.hs
  
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >=4.9 && <4.10, vector, sdl2, text, clock
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
  
